--- a/basic_test.Rmd
+++ b/basic_test.Rmd
@@ -10,31 +10,57 @@ knitr::opts_chunk$set(echo = TRUE)
 library(r2d3)
 library(dplyr)
 library(jsonlite)
+library(stringi)
 ```
 
 ## This should be the plot
 ```{r something_here, echo=FALSE}
 
-fn_to_json <- function(d) jsonlite::toJSON(d, dataframe = "rows")
-
-vct_g <- c("A", "B", "C", "E") 
-vct_v <- c("V1", "V2", "V3", "mark the koala climbs up trees") 
-
-vct_group <- vct_g  %>% rep(times = 4)
-vct_variable <- vct_v %>% rep(each = 4)
-vct_val <- c(56, 20, 90, 23, 95, 83, 45, 78, 7, 67, 32, 67, 43, 74, 22, 86)
-df_hm_data <- data.frame(group = vct_group, 
-          variable = vct_variable, value = vct_val)
-
-# so the variables seem as though they are just displayed in the order they
-# are presented.
-df_hm_data <- df_hm_data %>% arrange(desc(group))
+fn_to_json <- function(d) {
+  jsonlite::toJSON(d, dataframe = "rows", 
+      auto_unbox = FALSE, rownames = TRUE)
+}
 
 
-lst_data <- list(data = df_hm_data, group = vct_g, variable =  vct_v)
+# vct_digits <- runif(int_num_elements, min = 7, max = 55) %>% round(digits = 0)
+# str_title <- "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod"
+# vct_z <- sapply(vct_digits, function(x) substr(str_title, 1, x))
 
-r2d3(data = fn_to_json(lst_data), script = "mark_test.js",  d3_version = "4")
-# r2d3(data=c(0.3, 0.6, 0.8, 0.95, 0.40, 0.20), script = "mark_test.js")
+
+
+# new >>>>>>>
+int_num_elements <- 30
+
+vct_str_length <- sample(7:55, int_num_elements, replace = TRUE)
+vct_z <- stri_rand_strings(int_num_elements, vct_str_length) 
+vct_z[1] <- "mark the koala climbs up trees"
+
+# ASSERT labels are unique
+stopifnot((vct_z %>% unique() %>% length()) == int_num_elements)
+
+# A, B, C, D ... A, B, C, D
+vct_variable_x <- vct_z  %>% rep(times = int_num_elements)
+
+# A, A, A, A, B, B, B, B ..... D,D,D,D
+vct_variable_y <- vct_z  %>% rep(each = int_num_elements)
+
+vct_value <- runif(int_num_elements ^ 2, min = 1, max = 100) %>% round(digits = 0)
+
+df_hm_data <- data.frame(to = vct_variable_x, 
+                         from = vct_variable_y, value = vct_value)
+
+# make the diagonal zero
+df_hm_data$value <- 
+  ifelse(df_hm_data$from == df_hm_data$to, 0, df_hm_data$value)
+
+lst_data <- list(data = df_hm_data, lbl_to_x = vct_z, lbl_from_y = rev(vct_z))
+
+
+
+# <<<<<<<<<
+# call D3
+r2d3(data = fn_to_json(lst_data), script = "mark_test.js",d3_version = "5")
+
 ```
 
 
